{
    "name": "BWControls",
    "maps": [
        {
            "name": "InGame",
            "id": "6e9a2ea9-41f1-499b-b059-7667b1939c97",
            "actions": [
                {
                    "name": "move",
                    "type": "PassThrough",
                    "id": "f2faf1cd-fe90-4332-8cdc-1dcbf6da2377",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "point",
                    "type": "Value",
                    "id": "2ec28842-f057-4b59-8f8c-1b783ac65903",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "escape",
                    "type": "Button",
                    "id": "b961f8c5-c5fa-4e78-97b5-262af4dd6108",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "boost_speed",
                    "type": "Button",
                    "id": "5f932bad-8873-4801-b3dd-68298f362404",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "move_vertical",
                    "type": "Value",
                    "id": "557bc327-88dc-4ef5-86b7-f725088ee70f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "zoom",
                    "type": "PassThrough",
                    "id": "603cfbd6-c71a-4417-b037-ebe488c27ec0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "point_delta",
                    "type": "PassThrough",
                    "id": "25f184f5-439a-4f4d-bc56-e5b51f4d91f7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "reset_position",
                    "type": "Button",
                    "id": "dce8a7e1-f11a-4c61-bd19-f3e0683334e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "action1",
                    "type": "PassThrough",
                    "id": "5c1920ec-1d37-482d-a779-dd3e99bd58ae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "action2",
                    "type": "PassThrough",
                    "id": "d54c0e9b-2a2e-4697-bda5-362d7a0b9441",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "action3",
                    "type": "PassThrough",
                    "id": "1f25d065-03f3-4051-aa86-86d678375c4b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "465956a4-41ae-4555-8306-00c56f1a7d3e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a3b77474-22a9-4d90-8513-06fd9ab4b218",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "128cb4cb-590a-4bb1-95bc-00626c45cd4f",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "07f8b6d3-4cf6-4165-9b1e-0aef3417fea9",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8cca8ab3-eff9-413f-8e5e-20ac4012d9ea",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "aa86d58b-d40e-499f-a74a-a18893977a99",
                    "path": "<FlystickDevice>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa3a6079-c9b1-477d-b2b0-43d79c0513f7",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8b8b194-4656-4f33-999e-a07fb7146ee0",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc7dafc1-831d-42e9-bf8f-e3009b1513bb",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "boost_speed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "5f706dfd-495d-4e4e-97b3-24c9254e20cd",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move_vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "731e341e-e814-452c-9e88-1a9f06560e00",
                    "path": "<Keyboard>/#(Q)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move_vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a881511d-df22-4f32-bc81-96aa1c33675a",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move_vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fcb675b1-e043-4c99-92db-1914b04fa4e1",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "157267c5-3868-40a2-82f3-4e5b12064538",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "point_delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1544b957-78dc-4292-83df-b61daf742ab3",
                    "path": "<Keyboard>/#(R)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "reset_position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d97db602-faf4-485b-9017-70978a7fe94c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "action1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7abfe04b-cb29-470e-bec7-4abe8fa38e81",
                    "path": "<FlystickDevice>/firstButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "action1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17071fb1-b77d-4766-bf3c-2c74864b82eb",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "action2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ed69306-86ed-4568-9e09-8abbc06f7c10",
                    "path": "<FlystickDevice>/secondButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "action2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45437297-bb2e-4a3b-9409-e2f031529d83",
                    "path": "<Mouse>/middleButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "action3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8a96b04-7ff4-4658-b23a-54056ccca239",
                    "path": "<FlystickDevice>/thirdButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "action3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}